--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Responsive Portfolio Website</title>
+    <title>Dishant Gandhi - Chatbot Developer</title>
 </head>
 
 <body>
@@ -139,9 +139,9 @@
                 <img src="assets/img/about.jpg" alt="" class="about__img">
                 <div class="about__data">
                     <p class="about__description">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Id reprehenderit laborum expedita nisi, magnam soluta quaerat maiores obcaecati sit
-                        odit placeat ducimus omnis, repellendus atque quis commodi, vero quo perspiciatis.
+                        My job entails creating and implementing chatbots. I've primarily worked on Rasa Chatbots, Discord bots, and a simple NLP bot.
+                        Also, I am a Rasa Hero, an exclusive title granted to 20+ skilled contributors in Rasa from a total of 17k+ members.
+                        I'd be delighted to advise or assist you in the development of chatbots from the ground up.
                     </p>
                     <div class="about__info">
                         <div>
@@ -311,7 +311,7 @@
                             <i class="uil uil-database skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Database</h1>
-                                <span class="skills__subtitle">More than 2 years</span>
+                                <span class="skills__subtitle">More than 1 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -321,17 +321,29 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">SQL</h3>
+                                    <span class="skills__number">65%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__sql"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">YML</h3>
+                                    <span class="skills__number">45%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__yml"></span>
                                 </div>
                             </div>
 
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">REST</h3>
+                                    <span class="skills__number">45%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__rest"></span>
                                 </div>
                             </div>
                         </div>
@@ -375,6 +387,42 @@
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__docker"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Django</h3>
+                                    <span class="skills__number">50%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__django"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">HTML</h3>
+                                    <span class="skills__number">90%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__html"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">CSS</h3>
+                                    <span class="skills__number">70%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__css"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">JavaScript</h3>
+                                    <span class="skills__number">40%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__js"></span>
                                 </div>
                             </div>
                         </div>
