added footer sub

--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
             <div class="footer__container container grid">
                 <div>
                     <h1 class="footer__title">Dishant</h1>
-                    <span class="footer__subtite"></span>
+                    <span class="footer__subtite">Chatbot Developer</span>
                 </div>
 
                 <ul class="footer__links">
