--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 
     <title>Dishant Gandhi - Chatbot Developer</title>
+    <link rel="icon" href="assets/img/robot.svg" type="image/icon type">
 </head>
 
 <body>
