all rights reserved added

--- a/index.html
+++ b/index.html
@@ -941,6 +941,7 @@
                     </a>
                 </div>
             </div>
+            <p class="footer__copy">&#169; Dishant. All rights reserved</p>
         </div>
 
     </footer>
