added new work experience

--- a/index.html
+++ b/index.html
@@ -526,14 +526,15 @@
                     </div>
                     <!--==================== QUALIFICATION CONTENT 2 - WORK ====================-->
                     <div class="qualification__content" data-content id="work">
-                        <!--==================== Work 1 ====================-->
+
+                        <!--==================== Work 2- current ====================-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Chatbot Developer</h3>
-                                <span class="qualification__subtitle">NeuralSpace - Remote</span>
+                                <h3 class="qualification__title">Junior Chatbot Developer</h3>
+                                <span class="qualification__subtitle">DolphinChat - Remote</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Dec 2020 - June 2021
+                                    July 2021 - Present
                                 </div>
                             </div>
 
@@ -541,6 +542,27 @@
                                 <span class="qualification__rounder"></span>
                                 <span class="qualification__line"></span>
                             </div>
+                        </div>
+
+                        <!--==================== Work 1 ====================-->
+                        <div class="qualification__data">
+                            <div></div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                            
+                            <div>
+                                <h3 class="qualification__title">Chatbot Developer Internship</h3>
+                                <span class="qualification__subtitle">NeuralSpace - Remote</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    Dec 2020 - June 2021
+                                </div>
+                            </div>
+
+                            
                         </div>
                     </div>
                     <!--==================== QUALIFICATION CONTENT 3 - EDUCATION ====================-->
