added new videos

--- a/index.html
+++ b/index.html
@@ -751,13 +751,12 @@
                 <div class="swiper-wrapper">
                     <!--==================== VIDEO 1 ====================-->
                     <div class="videos__content grid swiper-slide">
-                        <img src="https://i3.ytimg.com/vi/eJMT2FovZsM/hqdefault.jpg" alt="" class="videos__img">
+                        <img src="https://i3.ytimg.com/vi/UcbNmZA65pw/hqdefault.jpg" alt="" class="videos__img">
 
                         <div class="videos__data">
-                            <h3 class="videos__title">Rasa chatbot website integration | Quick tutorial</h3>
-                            <p class="videos__description">Hi there, want to add Rasa Chatbot on the website?
-                                I will be showing you how to add your Rasa Chatbot to your website in 10 minutes! </p>
-                            <a href="https://www.youtube.com/watch?v=eJMT2FovZsM"
+                            <h3 class="videos__title">Send Mail from Rasa with Python | Quick Tutorial</h3>
+                            <p class="videos__description">I will be showing how to send mail to Users and Developers in Rasa using basic python code. </p>
+                            <a href="https://www.youtube.com/watch?v=UcbNmZA65pw"
                                 class="button button--flex button--small videos__button" target="_blank">
                                 Play video
                                 <i class="uil uil-play button__icon"></i>
@@ -766,14 +765,13 @@
                     </div>
                     <!--==================== VIDEO 2 ====================-->
                     <div class="videos__content grid swiper-slide">
-                        <img src="https://i3.ytimg.com/vi/fhG2zCVBANw/hqdefault.jpg" alt="" class="videos__img">
+                        <img src="https://i3.ytimg.com/vi/u6xOgR3jEMU/hqdefault.jpg" alt="" class="videos__img">
 
                         <div class="videos__data">
-                            <h3 class="videos__title">What is Intent? | In 2 minutes | In a Minute Tuts</h3>
-                            <p class="videos__description">Hi, What are intents? Are you guys still struggling to
-                                understand intents?
-                                Understand Intents in 2 Minutes.</p>
-                            <a href="https://www.youtube.com/watch?v=fhG2zCVBANw"
+                            <h3 class="videos__title">Boss said to Build Rasa Chatbot in 30Mins This is What I did (programming tutorial)</h3>
+                            <p class="videos__description">Rasa is one of the best frameworks for chatbots. My Boss said to build a chatbot in 30mins. 
+                                Will this be a success? Don't miss the ending.</p>
+                            <a href="https://www.youtube.com/watch?v=u6xOgR3jEMU"
                                 class="button button--flex button--small videos__button" target="_blank">
                                 Play video
                                 <i class="uil uil-play button__icon"></i>
