--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
                         </div>
                     </div>
                     <div class="contact__information">
-                        <i class="uil uil-envelope contact__icon"></i>
+                        <i class="uil uil-twitter contact__icon"></i>
 
                         <div>
                             <h3 class="contact__title">Email</h3>
