--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
                         <i class="uil uil-twitter contact__icon"></i>
 
                         <div>
-                            <h3 class="contact__title">Connect Me on twitter</h3>
+                            <h3 class="contact__title">Connect Me</h3>
                             <span class="contact__subtitle">@gandhi_dishant</span>
                         </div>
                     </div>
