added hoory integration

--- a/index.html
+++ b/index.html
@@ -755,7 +755,8 @@
 
                         <div class="videos__data">
                             <h3 class="videos__title">Send Mail from Rasa with Python | Quick Tutorial</h3>
-                            <p class="videos__description">I will be showing how to send mail to Users and Developers in Rasa using basic python code. </p>
+                            <p class="videos__description">I will be showing how to send mail to Users and Developers in
+                                Rasa using basic python code. </p>
                             <a href="https://www.youtube.com/watch?v=UcbNmZA65pw"
                                 class="button button--flex button--small videos__button" target="_blank">
                                 Play video
@@ -768,8 +769,10 @@
                         <img src="https://i3.ytimg.com/vi/u6xOgR3jEMU/hqdefault.jpg" alt="" class="videos__img">
 
                         <div class="videos__data">
-                            <h3 class="videos__title">Boss said to Build Rasa Chatbot in 30Mins This is What I did (programming tutorial)</h3>
-                            <p class="videos__description">Rasa is one of the best frameworks for chatbots. My Boss said to build a chatbot in 30mins. 
+                            <h3 class="videos__title">Boss said to Build Rasa Chatbot in 30Mins This is What I did
+                                (programming tutorial)</h3>
+                            <p class="videos__description">Rasa is one of the best frameworks for chatbots. My Boss said
+                                to build a chatbot in 30mins.
                                 Will this be a success? Don't miss the ending.</p>
                             <a href="https://www.youtube.com/watch?v=u6xOgR3jEMU"
                                 class="button button--flex button--small videos__button" target="_blank">
@@ -985,7 +988,7 @@
             color: hsl(var(--hue-color), 8%, 95%);
         }
 
-        .rw-conversation-container .rw-header .rw-with-subtitle .rw-avatar{
+        .rw-conversation-container .rw-header .rw-with-subtitle .rw-avatar {
             fill: hsl(var(--hue-color), 8%, 95%);
         }
 
@@ -1011,7 +1014,7 @@
             border: 1px solid hsl(var(--hue-color), 69%, 61%);
         }
     </style>
-    <script>!(function () {
+    <!-- <script>!(function () {
             let e = document.createElement("script"),
                 t = document.head || document.getElementsByTagName("head")[0];
             (e.src =
@@ -1022,19 +1025,24 @@
                         {
                             initPaylod: "/greet",
                             customData: { language: "en" },
-                            socketUrl: "https://rasa-horizon733.cloud.okteto.net/",
+                            socketUrl: "http://localhost:5005",
                             title: 'Portfolio Bot',
                             subtitle: 'Currently in development',
                             showMessageDate: true,
+                            hideWhenNotConnected: false,
                             openLauncherImage: "./assets/img/launcher.svg",
                             closeImage: "./assets/img/close.svg",
+                            
                         },
                         null
                     );
                 }),
                 t.insertBefore(e, t.firstChild);
         })();
-    </script>
+    </script> -->
+    <!-- Hoory -->
+    <script>!function (h, oo, r, y) { h[r] = h[r] || {}, h[r].workspace = y; const f = oo.getElementsByTagName('script')[0], j = oo.createElement('script'); j.async = !0, j.src = 'https://api-dev.hb-web.hoory.cloud/embed.js?w=' + y, f.parentNode.insertBefore(j, f), j.onload = function () { h[r].open() } }(window, document, 'hoory', 'deku');</script>
+    <!-- Hoory -->
 
     <!--==================== SWIPER JS ====================-->
     <script src="assets/js/swiper-bundle.min.js"></script>
