--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
                         {
                             initPaylod: "/greet",
                             customData: { language: "en" },
-                            socketUrl: "http://localhost:5005",
+                            socketUrl: "https://rasa-server-horizon733.cloud.okteto.net",
                             title: 'Portfolio Bot',
                             subtitle: 'Currently in development',
                             showMessageDate: true,
