added new achievement

--- a/index.html
+++ b/index.html
@@ -455,12 +455,7 @@
                     <!--==================== QUALIFICATION CONTENT 1 - ACHIEVEMENTS ====================-->
                     <div class="qualification__content qualification__active" data-content id="achievements">
                         <!--==================== achievements 1 ====================-->
-                        <!-- <div class="qualification__data">
-                            <div></div>
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
+                        <!-- <div class="qualification__data">                            
                             <div>
                                 <h3 class="qualification__title">Rasa SuperHero</h3>
                                 <span class="qualification__subtitle">Greatest contributor tag give to very few contributors 
@@ -470,7 +465,27 @@
                                     Sept 2021 - Present
                                 </div>
                             </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
                         </div> -->
+                        <!--==================== achievements  ====================-->
+                        <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__title">Community MVP in SnapKit Dev Challenge</h3>
+                                <span class="qualification__subtitle">Helped fellow participants with queries, sample projects, etc</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    Oct 2021 - Nov 2021
+                                </div>
+                            </div>
+                        </div>
                         <!--==================== achievements 2 ====================-->
                         <div class="qualification__data">
                             <div>
