added formatting for achievements

--- a/index.html
+++ b/index.html
@@ -472,22 +472,27 @@
                         </div> -->
                         <!--==================== achievements  ====================-->
                         <div class="qualification__data">
-                            <div></div>
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
                             <div>
                                 <h3 class="qualification__title">Community MVP in SnapKit Dev Challenge</h3>
-                                <span class="qualification__subtitle">Helped fellow participants with queries, sample projects, etc</span>
+                                <span class="qualification__subtitle">Helped fellow participants with queries, sample
+                                    projects, etc</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     Oct 2021 - Nov 2021
                                 </div>
                             </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
                         </div>
                         <!--==================== achievements 2 ====================-->
                         <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
                             <div>
                                 <h3 class="qualification__title">Rasa Hero</h3>
                                 <span class="qualification__subtitle">Exclusive member of Rasa Open Source. One of 20+
@@ -498,18 +503,10 @@
                                 </div>
                             </div>
 
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
+
                         </div>
                         <!--==================== achievements 3 ====================-->
                         <div class="qualification__data">
-                            <div></div>
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
                             <div>
                                 <h3 class="qualification__title">Rasa Contributor</h3>
                                 <span class="qualification__subtitle">A starter tag when I first contributed in
@@ -519,9 +516,18 @@
                                     Aug 2020 - Dec 2020
                                 </div>
                             </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
                         </div>
                         <!--==================== achievements 4 ====================-->
                         <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
                             <div>
                                 <h3 class="qualification__title">Winner in SnapKit Dev Challenge</h3>
                                 <span class="qualification__subtitle">Built a Learning app for students with AR Lens
@@ -532,18 +538,10 @@
                                 </div>
                             </div>
 
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
+
                         </div>
                         <!--==================== achievements 5 ====================-->
                         <div class="qualification__data">
-                            <div></div>
-                            <div>
-                                <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-                            </div>
                             <div>
                                 <h3 class="qualification__title">Top 15 in WWP Hacks</h3>
                                 <span class="qualification__subtitle">Built a Blood donation app. With alerts and
@@ -552,6 +550,10 @@
                                     <i class="uil uil-calendar-alt"></i>
                                     Dec 2020
                                 </div>
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
                             </div>
                         </div>
                     </div>
@@ -733,18 +735,20 @@
                     </div>
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="https://socialify.git.ci/Horizon733/customer-care-chatbot/image?description=1&logo=https%3A%2F%2Fraw.githubusercontent.com%2FHorizon733%2Fcustomer-care-chatbot%2Fmain%2Fassets%2Fbot.png&name=1&owner=1&pattern=Brick%20Wall&theme=Light" 
-                        alt="" class="portfolio__img">
+                        <img src="https://socialify.git.ci/Horizon733/customer-care-chatbot/image?description=1&logo=https%3A%2F%2Fraw.githubusercontent.com%2FHorizon733%2Fcustomer-care-chatbot%2Fmain%2Fassets%2Fbot.png&name=1&owner=1&pattern=Brick%20Wall&theme=Light"
+                            alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Customer care virtual assistant</h3>
-                            <p class="portfolio__description">Customer care bot for ecomm company which can solve faq and chitchat with users, 
+                            <p class="portfolio__description">Customer care bot for ecomm company which can solve faq
+                                and chitchat with users,
                                 can contact directly to team.</p>
                             <div class="portfolio__calendar">
                                 <i class="uil uil-calendar-alt"></i>
                                 August 2021 - Present
                             </div>
-                            <a href="https://github.com/Horizon733/customer-care-chatbot" class="button button--flex button--small portfolio__button" aria-current="_target">
+                            <a href="https://github.com/Horizon733/customer-care-chatbot"
+                                class="button button--flex button--small portfolio__button" aria-current="_target">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -752,41 +756,45 @@
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="https://socialify.git.ci/Horizon733/creative-kit-sample/image?description=1&font=Inter&logo=https%3A%2F%2Fuser-images.githubusercontent.com%2F57827233%2F137875987-48a56729-501e-44f1-a85d-133886479072.png&name=1&owner=1&pattern=Brick%20Wall&theme=Light" 
-                            alt=""class="portfolio__img">
+                        <img src="https://socialify.git.ci/Horizon733/creative-kit-sample/image?description=1&font=Inter&logo=https%3A%2F%2Fuser-images.githubusercontent.com%2F57827233%2F137875987-48a56729-501e-44f1-a85d-133886479072.png&name=1&owner=1&pattern=Brick%20Wall&theme=Light"
+                            alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Snap Creative kit Sample</h3>
-                            <p class="portfolio__description">An android app that demonstrates Snapchat's creative kit integration with Jetpack compose</p>
+                            <p class="portfolio__description">An android app that demonstrates Snapchat's creative kit
+                                integration with Jetpack compose</p>
                             <div class="portfolio__calendar">
                                 <i class="uil uil-calendar-alt"></i>
                                 October 2021
                             </div>
-                            <a href="https://github.com/Horizon733/creative-kit-sample" class="button button--flex button--small portfolio__button" aria-current="_target">
+                            <a href="https://github.com/Horizon733/creative-kit-sample"
+                                class="button button--flex button--small portfolio__button" aria-current="_target">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
                     </div>
-                <!--==================== PORTFOLIO 4 ====================-->
-                <div class="portfolio__content grid swiper-slide">
-                    <img src="https://socialify.git.ci/Horizon733/snap-loginkit-sample/image?description=1&logo=https%3A%2F%2Fuser-images.githubusercontent.com%2F57827233%2F137875987-48a56729-501e-44f1-a85d-133886479072.png&name=1&owner=1&pattern=Brick%20Wall&theme=Light" 
-                        alt=""class="portfolio__img">
+                    <!--==================== PORTFOLIO 4 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="https://socialify.git.ci/Horizon733/snap-loginkit-sample/image?description=1&logo=https%3A%2F%2Fuser-images.githubusercontent.com%2F57827233%2F137875987-48a56729-501e-44f1-a85d-133886479072.png&name=1&owner=1&pattern=Brick%20Wall&theme=Light"
+                            alt="" class="portfolio__img">
 
-                    <div class="portfolio__data">
-                        <h3 class="portfolio__title">Snap Login kit Sample</h3>
-                        <p class="portfolio__description">An android app that demonstrates Snapchat's Login kit integration with Jetpack compose</p>
-                        <div class="portfolio__calendar">
-                            <i class="uil uil-calendar-alt"></i>
-                            October 2021
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Snap Login kit Sample</h3>
+                            <p class="portfolio__description">An android app that demonstrates Snapchat's Login kit
+                                integration with Jetpack compose</p>
+                            <div class="portfolio__calendar">
+                                <i class="uil uil-calendar-alt"></i>
+                                October 2021
+                            </div>
+                            <a href="https://github.com/Horizon733/creative-kit-sample"
+                                class="button button--flex button--small portfolio__button" aria-current="_target">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
                         </div>
-                        <a href="https://github.com/Horizon733/creative-kit-sample" class="button button--flex button--small portfolio__button" aria-current="_target">
-                            Demo
-                            <i class="uil uil-arrow-right button__icon"></i>
-                        </a>
                     </div>
                 </div>
-            </div>
 
                 <div class="swiper-button-next">
                     <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
@@ -816,7 +824,8 @@
 
                         <div class="videos__data">
                             <h3 class="videos__title">Deploy your Rasa Chatbot on Cloud for FREE!?</h3>
-                            <p class="videos__description">, I will be showing you how to deploy your Rasa chatbot on a Cloud server for Free! 
+                            <p class="videos__description">, I will be showing you how to deploy your Rasa chatbot on a
+                                Cloud server for Free!
                                 No, it's not Heroku. </p>
                             <a href="https://www.youtube.com/watch?v=ouFR81rpg5o"
                                 class="button button--flex button--small videos__button" target="_blank">
@@ -1093,7 +1102,7 @@
                             hideWhenNotConnected: false,
                             openLauncherImage: "./assets/img/launcher.svg",
                             closeImage: "./assets/img/close.svg",
-                            
+
                         },
                         null
                     );
