--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
-                            <input type="text" class="contact__input" required>
+                            <input type="text" class="contact__input" name="name" id="full-name" placeholder="First and Last" required>
                         </div>
 
                         <div class="contact__content">
@@ -986,12 +986,12 @@
 
                         <div class="contact__content">
                             <label for="" class="contact__label">Project</label>
-                            <input type="text" class="contact__input" required>
+                            <input type="text" class="contact__input" name="_subject" required>
                         </div>
 
                         <div class="contact__content">
                             <label for="" class="contact__label">Message</label>
-                            <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                            <textarea name="" id="" cols="0" rows="7" class="contact__input" name="message"></textarea>
                         </div>
 
                         <div>
