--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
                         {
                             initPaylod: "/greet",
                             customData: { language: "en" },
-                            socketUrl: "https://rasa-horizon733.cloud.okteto.net",
+                            socketUrl: "https://rasa-server-horizon733.cloud.okteto.net/",
                             title: 'Portfolio Bot',
                             subtitle: 'Currently in development',
                             showMessageDate: true,
